{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 921,
  "lineage": "e6a9843c-738a-18e3-fbf3-7be8c6740e67",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:internet-gateway/igw-06a405f2037000942",
            "id": "igw-06a405f2037000942",
            "owner_id": "410898058921",
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "production_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:loadbalancer/app/production-app-lb/c2ea6eb4d3405f55",
            "arn_suffix": "app/production-app-lb/c2ea6eb4d3405f55",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "production-app-lb-49190412.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:loadbalancer/app/production-app-lb/c2ea6eb4d3405f55",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "production-app-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-064e40abb0304b0b4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-026acb8a64cb2c38a"
              },
              {
                "subnet_id": "subnet-02b96a605dab189ba"
              },
              {
                "subnet_id": "subnet-0dea0f0749d88c331"
              }
            ],
            "subnets": [
              "subnet-026acb8a64cb2c38a",
              "subnet-02b96a605dab189ba",
              "subnet-0dea0f0749d88c331"
            ],
            "vpc_id": "vpc-0a92d66c136312543",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "production_app_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:listener/app/production-app-lb/c2ea6eb4d3405f55/9aec5b857e304ae7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:targetgroup/production-app-tg/123e84600f85a64e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:listener/app/production-app-lb/c2ea6eb4d3405f55/9aec5b857e304ae7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:loadbalancer/app/production-app-lb/c2ea6eb4d3405f55",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.production_app_lb",
            "aws_lb_target_group.production_app_target_group",
            "aws_security_group.instance_sg",
            "aws_subnet.public_subnet_1a",
            "aws_subnet.public_subnet_1b",
            "aws_subnet.public_subnet_1c",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "production_app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:targetgroup/production-app-tg/123e84600f85a64e",
            "arn_suffix": "targetgroup/production-app-tg/123e84600f85a64e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:410898058921:targetgroup/production-app-tg/123e84600f85a64e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "production-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:security-group/sg-03da1bb00336b6d64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03da1bb00336b6d64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-2024041318393786900000000d",
            "name_prefix": "terraform-",
            "owner_id": "410898058921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Instance-Security-Group-jenkins"
            },
            "tags_all": {
              "Name": "Instance-Security-Group-jenkins"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:security-group/sg-064e40abb0304b0b4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-064e40abb0304b0b4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2024041318393859280000000f",
            "name_prefix": "terraform-",
            "owner_id": "410898058921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Instance-Security-Group"
            },
            "tags_all": {
              "Name": "Instance-Security-Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:subnet/subnet-0dea0f0749d88c331",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dea0f0749d88c331",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410898058921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:subnet/subnet-026acb8a64cb2c38a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026acb8a64cb2c38a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410898058921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:subnet/subnet-02b96a605dab189ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02b96a605dab189ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "410898058921",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:vpc/vpc-0a92d66c136312543",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0b35e04d94f017878",
            "default_route_table_id": "rtb-0730b28989bc83766",
            "default_security_group_id": "sg-046c7b591b9735db6",
            "dhcp_options_id": "dopt-01cfb37c8a8ce3c8f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a92d66c136312543",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0730b28989bc83766",
            "owner_id": "410898058921"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster_produccion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:security-group/sg-0c8c3b1c5397d98d2",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0c8c3b1c5397d98d2",
            "ingress": [],
            "name": "produccion-cluster-2024041318393819760000000e",
            "name_prefix": "produccion-cluster-",
            "owner_id": "410898058921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "produccion-cluster"
            },
            "tags_all": {
              "Name": "produccion-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster_produccion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:410898058921:security-group/sg-0a0648355437168ca",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0a0648355437168ca",
            "ingress": [],
            "name": "produccion-node-2024041318393781830000000c",
            "name_prefix": "produccion-node-",
            "owner_id": "410898058921",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "produccion-node",
              "kubernetes.io/cluster/produccion": "owned"
            },
            "tags_all": {
              "Name": "produccion-node",
              "kubernetes.io/cluster/produccion": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a92d66c136312543"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster_produccion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1510941090",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c8c3b1c5397d98d2",
            "security_group_rule_id": "sgr-08abaa9dbd6955f09",
            "self": false,
            "source_security_group_id": "sg-0a0648355437168ca",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster_produccion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-19285657",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-0e0d60f9fb2ceb098",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3874841254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-0912d994e307ed875",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1139004849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-0f1059d05dfd02a6d",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2325852711",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-025de113dcbb12b22",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2583531014",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-0279d8e633272006d",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4250713549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-074b2fdf04d7d4e5a",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2818770320",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-02453665d2d8d0dfa",
            "self": false,
            "source_security_group_id": "sg-0c8c3b1c5397d98d2",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1090546881",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-096b09d3e0be1ba36",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2570097050",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-09cbc3f7ab3e803c1",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1030697589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0a0648355437168ca",
            "security_group_rule_id": "sgr-06e129e6844ade2bf",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "module.eks_cluster_produccion.aws_security_group.cluster",
            "module.eks_cluster_produccion.aws_security_group.node"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}